--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
 body {
-    background-color: red;
+    text-align: center;
+    font-size: x-large;
+    font-family: 'Grandstander', cursive;
+}
+button {
+    background-color: #7fcd91;
+    color: white;
+    padding: 8px 14px 8px 14px;
+    margin:30px;
+    border-style: solid;
+    border-color: black;
+    border: 1px;
+    font-size: large;
+}
+
+button:hover {
+    background-color: green;
+    cursor: pointer;
 }
